# mrs_uav_trajectory_generation

./: .gitman.yml  CHANGELOG.rst  CMakeLists.txt  README.md  nodelets.xml  package.xml  plugins.xml  pub.sh
.ci/: ci_before_install.sh
config/: debug_verbosity.yaml  default.yaml  drs.cfg
config/private/: path_random_flier.yaml
config/public/: trajectory_generation.yaml
include/eth_trajectory_generation/: polynomial_optimization_nonlinear.h  trajectory.h  trajectory_sampling.h  vertex.h
include/eth_trajectory_generation/impl/: polynomial_optimization_linear_impl.h  polynomial_optimization_nonlinear_impl.h
include/mav_trajectory_generation/: extremum.h  polynomial.h  polynomial_optimization_linear.h  polynomial_optimization_nonlinear.h  segment.h  test_utils.h
include/mav_trajectory_generation/impl/: polynomial_optimization_linear_impl.h  polynomial_optimization_nonlinear_impl.h
include/mav_trajectory_generation/rpoly/: rpoly_ak1.h
launch/: path_random_flier.launch  trajectory_generation.launch
lib/: nlopt
paths/: example.yaml
scripts/: get_public_params.py
src/: mrs_trajectory_generation.cpp  path_random_flier.cpp  polynomial.cpp  segment.cpp  timing.cpp  trajectory.cpp  trajectory_generation.cpp  trajectory_sampling.cpp  vertex.cpp
src/eth_trajectory_generation/: segment.cpp  trajectory.cpp  trajectory_sampling.cpp  vertex.cpp
test/: CMakeLists.txt  all_tests.sh  coverage.sh  single_test.sh
test/basic/: basic.test  test.cpp
test/basic/launch/: mrs_uav_system.launch
test/fallback_sampling/: fallback_sampling.test
test/get_path_after_takeoff/: test.cpp
test/get_path_before_takeoff/: get_path_before_takeoff.test  test.cpp
test/include/: get_path_test.h  trajectory_generation_test.h
test/path_before_takeoff/: path_before_takeoff.test  test.cpp
test/service_fly_now/: service_fly_now.test  test.cpp
test/topic_fly_now/: test.cpp
tmux/after_takeoff/: plan_path.py  session.yml
tmux/after_takeoff/config/: simulator.yaml
tmux/before_takeoff/: get_path.py  layout.json  plan_path.py  session.yml
tmux/before_takeoff/config/: custom_config.yaml
tmux/dynamic_test/: layout.json  session.yml
trajectory_generation/: CMakeLists.txt  package.xml
trajectory_generation/cfg/: trajectory_generation.cfg
trajectory_generation/config/: default.yaml
trajectory_generation/include/mav_trajectory_generation/: convolution.h  motion_defines.h  polynomial.h  polynomial_optimization_linear.h  polynomial_optimization_nonlinear.h  segment.h  timing.h  trajectory.h  trajectory_sampling.h  vertex.h
trajectory_generation/include/mav_trajectory_generation/impl/: polynomial_optimization_linear_impl.h  polynomial_optimization_nonlinear_impl.h
trajectory_generation/launch/: trajectory_generation.launch
trajectory_generation/paths/: example.yaml
trajectory_generation/src/: io.cpp  motion_defines.cpp  polynomial.cpp  trajectory.cpp  trajectory_generation.cpp  vertex.cpp
trajectory_generation/src/rpoly/: rpoly_ak1.cpp
