<?xml version="1.0"?>
<package format="2">

  <name>trajectory_generation</name>
  <version>1.0.0</version>
  <description>trajectory_generation</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>mav_msgs</depend>
  <depend>nlopt</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
